# IsTheTubeRunning

./: .env.example  .env.vault  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE_10_PR2.5_FINAL_SUMMARY.md  PROGRESS_PR235.md  README.md  TESTING_ISSUES.md  TEST_RESULTS_PR2.5.md  codecov.yml  docker-compose.yml  package-lock.json  package.json  phase_10_implementation_plan.md  phase_10_pr3_implementation_plan.md  readme.md  renovate.json  route_segment_data_model_analysis.md  ts-to-zod.config.js  tsconfig.json
backend/: .dockerignore  .env  .env.ci  .env.example  .env.production  .env.vault  .env.x  .gitignore  Dockerfile  README.md  alembic.ini  openapi.json  package-lock.json  package.json  pyproject.toml  refactoring-notes.md
backend/.ast-grep/rules/: soft-delete-filter.yml
backend/alembic/: env.py
backend/alembic/versions/: 1025d77921da_add_is_cleared_state_to_alert_disabled_.py  1c202b5d7d28_add_timezone_to_routes.py  1f4d6532d88a_add_contact_hash_columns.py  237745010854_initial_schema.py  2bae05497678_add_mode_to_lines.py  3d846b7d1114_change_route_fk_cascade_to_restrict.py  49b26f7f0a3a_add_rate_limit_log_model.py  55ac4b0569a1_add_route_variants_canonical_to_lines.py  595219043932_remove_color_from_lines.py  6675f5ef1429_add_route_station_index.py  728def08ac79_convert_route_segment_unique_to_partial_.py  7df10ab411af_add_mode_to_severity_codes_and_alert_.py  883740308b56_initial_schema_with_all_models.py  8ed2312f54f3_add_line_disruption_state_logs_table.py  90d1c387ce78_add_hub_naptan_and_common_name_to_.py  941d95fee6c2_add_routes_to_lines.py  958e140c30a0_make_route_segment_line_id_nullable.py  9888a309ff57_add_partial_unique_index_to_station_.py  a1c51fa40ade_add_tfl_metadata_and_station_disruption_.py  cea4031bd399_expand_text_columns_for_disruption_.py  cf589f9baac2_add_line_change_logs_table.py  dbef0183286a_update_station_disruption_schema_for_.py  e5dfdd8388bc_make_route_segment_line_id_nullable.py  e9121fedff17_add_contact_id_to_verification_codes.py  f8838ec5262d_remove_redundant_station_id_index_from_.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: admin.py  auth.py  contacts.py  notification_preferences.py  routes.py  tfl.py
backend/app/celery/: __init__.py  app.py  database.py  schedules.py  tasks.py
backend/app/core/: __init__.py  admin.py  auth.py  config.py  database.py  logging.py  redis.py  telemetry.py  utils.py
backend/app/helpers/: __init__.py  disruption_helpers.py  route_validation.py  soft_delete_filters.py  station_fetching.py  station_resolution.py
backend/app/middleware/: __init__.py  access_logging.py
backend/app/models/: __init__.py  admin.py  base.py  notification.py  rate_limit.py  route.py  route_index.py  tfl.py  user.py  user_route.py  user_route_index.py
backend/app/schemas/: admin.py  routes.py  tfl.py
backend/app/services/: admin_service.py  alert_service.py  auth_service.py  contact_service.py  disruption_matching_service.py  email_service.py  notification_preference_service.py  notification_service.py  route_index_service.py  route_service.py  sms_service.py  tfl_service.py  user_route_index_service.py  user_route_service.py  verification_service.py
backend/app/types/: tfl_api.py
backend/app/utils/: __init__.py  admin_helpers.py  extract_db_credentials.py  pii.py
backend/scripts/: generate_openapi.py
backend/tests/: __init__.py  conftest.py  mock_jwt.py  test_access_logging.py  test_admin_alerts.py  test_admin_dashboard.py  test_admin_helpers.py  test_admin_route_index.py  test_alert_service.py  test_auth.py  test_auth_integration.py  test_beat_otel.py  test_celery_database.py  test_celery_database_integration.py  test_celery_metadata_and_graph_tasks.py  test_celery_otel.py  test_celery_otel_propagation.py  test_celery_schedules.py  test_celery_tasks.py  test_cli.py  test_compute_metadata_hash.py  test_config.py  test_contacts_api.py  test_database.py  test_database_fork_safety.py  test_email_service.py  test_logging.py  test_main.py  test_mock_jwt.py  test_models.py  test_network_graph_rebuild_isolation.py  test_notification_preference_service.py  test_notification_preferences_api.py  test_notification_service.py  test_otel_integration.py  test_phase8_coverage.py  test_railway_network_fixture.py  test_redis_otel.py  test_refresh_metadata_with_change_detection.py  test_route_index_service.py  (+18 more)
backend/tests/api/: test_routes_disruptions_api.py
backend/tests/core/: test_telemetry.py
backend/tests/fixtures/: __init__.py  otel.py
backend/tests/helpers/: http_assertions.py  jwt_helpers.py  network_helpers.py  otel.py  railway_network.py  soft_delete_assertions.py  test_data.py  test_disruption_helpers.py  test_station_fetching.py  types.py
backend/tests/models/: test_user.py
backend/tests/scripts/: test_ufw_cloudflare.py
backend/tests/services/: test_admin_otel.py  test_alert_otel.py  (+7 more)
backend/tfl_responses/: Line_DisruptionByModeByPathModes.txt  Line_RouteSequenceByPathIdPathDirectionQueryServiceTypesQueryExcludeCrowding.txt  Line_StatusByIdsByPathIdsQueryDetail.txt  StopPoint_DisruptionByModeByPathModesQueryIncludeRouteBlockedStops_includeRouteBlockedStops_false.txt  StopPoint_DisruptionByModeByPathModesQueryIncludeRouteBlockedStops_includeRouteBlockedStops_true.txt
(+361 files in other folders)
