[project]
name = "isthetuberunning-backend"
version = "0.1.0"
description = "TfL Disruption Alert System - Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0", # PostgreSQL async driver
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "aiocache[redis]>=0.12.0",
    "pydantic-tfl-api>=3.1.0",
    "python-jose[cryptography]>=3.3.0", # JWT handling for Auth0
    "httpx>=0.28.0", # Async HTTP client
    "python-multipart>=0.0.17", # Form data support
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0", # Phone number validation and normalization
    "structlog>=24.4.0", # Structured logging
    "python-dotenv-vault>=0.7.0", # Encrypted .env file management
    "jinja2>=3.1.6",
    "aiosmtplib>=3.0.0", # Async SMTP library for email sending
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "psycopg[binary,pool]>=3.2.12", # For Alembic migrations in CI/dev
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.18.2",
    "types-redis>=4.6.0",
    "pre-commit>=4.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-postgresql>=7.0.2",
    "cryptography>=46.0.3",
    "types-python-jose>=3.5.0.20250531",
    "freezegun>=1.5.5",
    "celery-types>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests that call real external APIs (run in CI and locally on-demand)",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",  # Fail if overall coverage drops below 95%
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    # Exclude Protocol stub methods (not executable code)
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",  # Lines with only ellipsis (stub marker)
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913", # Too many arguments
    "B008",    # Do not perform function call in argument defaults (needed for FastAPI Depends)
    "RUF022",  # __all__ is not sorted - we prefer logical grouping
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN201",  # Missing return type annotation
    "S101",    # Use of assert
    "PLR2004", # Magic value comparisons
]
"alembic/versions/*.py" = [
    "E501",    # Line too long - migrations can have long constraint definitions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

# Strict mode ONLY for our own code
# Allow importing partially typed libraries (aiocache, dotenv_vault) without py.typed markers
[[tool.mypy.overrides]]
module = "app.*"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
disable_error_code = ["import-untyped"]

# Libraries with partial types - use what's there, don't fail on gaps
[[tool.mypy.overrides]]
module = "pytest_postgresql.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_return_any = false
follow_imports = "skip"
